LK017: CSS modif on news carrousel + IMG

--- a/destination.html
+++ b/destination.html
@@ -119,8 +119,8 @@
                             </div>
                         </div>
 
-                    <div class = "container-flex" style="min-height: 35em; max-height: 35em; padding-bottom: 2em" id="news_container">
-                        <div id="carouselExampleSlidesOnly" style="overflow: hidden; background-color: rgba(255, 255, 255, 0.3); position: centered; padding: 2em 2em 2em 2em; max-width: 40em; max-height: 34em; margin-left:10em; margin-right:5em; margin-bottom: 2em; margin-top: 2em"class="carousel slide" data-ride="carousel">
+                    <div class = "container-flex justify-content-md-center" style="min-height: 35em; max-height: 35em; padding-bottom: 2em" id="news_container">
+                        <div id="carouselExampleSlidesOnly" style="overflow: hidden; background-color: rgba(255, 255, 255, 0.3); padding: 2em 2em 2em 2em; max-width: 40em; max-height: 34em; margin-left:10em; margin-right:5em; margin-bottom: 2em; margin-top: 2em"class="carousel slide" data-ride="carousel">
                           <div class="carousel-inner">
                             <div class="carousel-item active">
                               <img class="d-block w-100" id="news_img_1" alt="">
