--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <!-- Sidebar html content -->
 <nav id="sidebar">
-    <div class="sidebar-header">
+    <div class="sidebar-header" id="sidebarCollapse">
         <h3>LhoKho</h3>
         <strong>LK</strong>
     </div>
