--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
     <script src="scripts/navigation.js"></script>
     <!-- script to connect to firebase -->
     <script src="scripts/connectFirebase.js"></script>
+    <script src="scripts/weather.js"></script>
     <!-- script to init leaflet map -->
+    <script src="scripts/barLayer.js"></script>
     <script src="scripts/initMap.js"></script>
-    <script src="scripts/generalMap.js"></script>
+    <script defer src="scripts/generalMap.js"></script>
 </body>
 
 </html>
