LK019 Work on ticket display *construction of sorting ticket by time (under construction)

--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -28,7 +28,7 @@
 
     <ul class="list-unstyled CTAs">
         <div class="form-group">
-            <input type="checkbox" id="toggle_tgv" data-toggle="toggle" data-on="TGV Max" data-off="View" data-onstyle="info" data-offstyle="warning">
+            <input type="checkbox" id="toggle_tgv" data-toggle="toggle" style="width:100%;" data-on="TGV Max" data-off="View" data-onstyle="info" data-offstyle="warning">
             <script>
                 $(function() {
                     $('#toggle_tgv').change(function() {
