--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -65,38 +65,33 @@
                 <label class="mr-sm-2">Duration </label>
                 <div class="btn-group-toggle btn-block" data-toggle="buttons" id="weather_buttons">
                     <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="options" id="6h" autocomplete="off"> 6H
+                        <input type="radio" name="time" id="6h" autocomplete="off"> 6H
                     </label>
                     <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="options" id="12h" autocomplete="off"> 12H
+                        <input type="radio" name="time" id="12h" autocomplete="off"> 12H
                     </label>
                     <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="options" id="24h" autocomplete="off"> 24H
+                        <input type="radio" name="time" id="24h" autocomplete="off"> 24H
                     </label>
                     <label class="btn btn-outline-secondary active text-white">
-                        <input type="radio" name="options" id="unknown_time" autocomplete="off" checked> ?
+                        <input type="radio" name="time" id="unknown_time" autocomplete="off" checked> ?
                     </label>
                 </div>
-                <script>
-                    $('#weather_buttons').on('click', function () {
-                        console.log($(this).text());
-                    });
-                </script>
             </div>
             <div class="input-group-btn">
                 <label class="mr-sm-2">Weather </label>
                 <div class="btn-group-toggle btn-block" data-toggle="buttons">
                     <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="options" id="sun" autocomplete="off"><i class="fa fa-sun"></i>
+                        <input type="radio" name="weather" id="sun" autocomplete="off"><i class="fa fa-sun"></i>
                     </label>
                     <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="options" id="hot" autocomplete="off"> +5°
+                        <input type="radio" name="weather" id="hot" autocomplete="off"> +5°
                     </label>
                     <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="options" id="cold" autocomplete="off"> -5°
+                        <input type="radio" name="weather" id="cold" autocomplete="off"> -5°
                     </label>
                     <label class="btn btn-outline-secondary active text-white">
-                        <input type="radio" name="options" id="unknown_weather" autocomplete="off" checked> ?
+                        <input type="radio" name="weather" id="unknown_weather" autocomplete="off" checked> ?
                     </label>
                 </div>
             </div>
