LK019 Modify time restriction to display coherent date

--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -65,13 +65,13 @@
                 <label class="mr-sm-2">Duration </label>
                 <div class="btn-group-toggle btn-block" data-toggle="buttons" id="weather_buttons">
                     <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="time" id="6h" autocomplete="off"> 6H
+                        <input type="radio" name="time" id="6h" autocomplete="off"> < 6H
                     </label>
                     <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="time" id="12h" autocomplete="off"> 12H
+                        <input type="radio" name="time" id="12h" autocomplete="off"> < 12H
                     </label>
                     <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="time" id="24h" autocomplete="off"> 24H
+                        <input type="radio" name="time" id="24h" autocomplete="off"> < 24H
                     </label>
                     <label class="btn btn-outline-secondary active text-white">
                         <input type="radio" name="time" id="unknown_time" autocomplete="off" checked> ?
