--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -63,7 +63,7 @@
             </script>
             <div class="input-group-btn">
                 <label class="mr-sm-2">Duration </label>
-                <div class="btn-group-toggle btn-block" data-toggle="buttons" id="weather_buttons">
+                <div class="btn-group-toggle btn-block" data-toggle="buttons" id="time_buttons">
                     <label class="btn btn-outline-secondary text-white">
                         <input type="radio" name="time" id="6h" autocomplete="off"> < 6H
                     </label>
@@ -80,7 +80,7 @@
             </div>
             <div class="input-group-btn">
                 <label class="mr-sm-2">Weather </label>
-                <div class="btn-group-toggle btn-block" data-toggle="buttons">
+                <div class="btn-group-toggle btn-block" data-toggle="buttons" id="weather_buttons">
                     <label class="btn btn-outline-secondary text-white">
                         <input type="radio" name="weather" id="sun" autocomplete="off"><i class="fa fa-sun"></i>
                     </label>
